--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": [
+    "src/*/*.js",
     "*.js",
     "libraries/*.js",
     "/Users/tzuzul/.vscode/extensions/samplavigne.p5-vscode-1.2.11/p5types/global.d.ts"
